# lab06

./: CMakeLists.txt
.github/workflows/: CPack.yaml
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
